# ancbuddy-site

./: .gitignore  ATTRIBUTION_SETUP.md  CHANGELOG.md  CNAME  README.md  index.html  index.html.backup2  robots.txt
.claude/: launch.json
.github/workflows/: configure-porkbun-dns.yml  deploy.yml  growth-agent-schedule.yml  transfer-porkbun-secrets.yml
docs/: GROWTH_AGENT_DATABASE.md  SEO_SEARCH_CONSOLE_PLAN_2026-07-22.md  growth-agent-operations.md
docs/design/: ceo-inbox-fidelity.md  ceo-inbox-spec.md
growth-agent/: .env.example  README.md  main.py  pyproject.toml
growth-agent/deploy/: ancbuddy-growth-agent.service
growth-agent/docs/: prompt.md
growth-agent/evals/: README.md  cases.jsonl  run_local.py
growth-agent/growth_agent/: __init__.py  agent.py  app.py  approval.py  config.py  credentials.py  integrations.py  models.py  security.py  service.py  store.py
growth-agent/growth_agent/adapters/: __init__.py  base.py  github.py  smtp.py  webhook.py
growth-agent/scripts/: generate_diagrams.py
growth-agent/tests/: conftest.py  test_agent_credentials.py  test_agent_policy.py  test_api.py  test_approvals.py  test_durable_execution.py  test_models.py  test_supabase_store.py
scripts/: create-lemon-webhook.mjs
site-src/: .env.example  COMMERCIAL_MODE.md  README.md  SEO_MEASUREMENT.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
site-src/ceo/: index.html
site-src/content/: product-facts.json
site-src/public/: appcast.xml  buddy-hero-160.avif  llms.txt  (+6 more)
supabase/: .env.example  config.toml
(+85 files in other folders)
